add spring-shell config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 trainee.data.file=init_data/trainee_data.json
 trainer.data.file=init_data/trainer_data.json
 training.data.file=init_data/training_data.json
+user.data.file=init_data/user_data.json
