--- a/pom.xml
+++ b/pom.xml
@@ -15,13 +15,14 @@
         <spring.version>6.1.12</spring.version>
         <spring-shell.version>1.2.0.RELEASE</spring-shell.version>
         <junit.version>5.10.0</junit.version>
-        <mockito.version>5.3.0</mockito.version>
         <postgresql.version>42.7.3</postgresql.version>
         <slf4j.version>2.0.16</slf4j.version>
         <logback.version>1.5.7</logback.version>
         <jackson.version>2.15.2</jackson.version>
         <javax.version>1.3.2</javax.version>
         <jline.version>3.26.3</jline.version>
+        <byte-buddy.version>1.15.0</byte-buddy.version>
+        <hibernate.validator.version>8.0.1.Final</hibernate.validator.version>
     </properties>
 
     <dependencies>
@@ -67,13 +68,6 @@
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
             <version>${junit.version}</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-core</artifactId>
-            <version>${mockito.version}</version>
             <scope>test</scope>
         </dependency>
 
@@ -125,7 +119,11 @@
             <version>${jline.version}</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>${hibernate.validator.version}</version>
+        </dependency>
 
     </dependencies>
 
