--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <jline.version>3.26.3</jline.version>
         <byte-buddy.version>1.15.0</byte-buddy.version>
         <hibernate.validator.version>8.0.1.Final</hibernate.validator.version>
+        <lombok.version>1.18.34</lombok.version>
     </properties>
 
     <dependencies>
@@ -123,6 +124,13 @@
             <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
             <version>${hibernate.validator.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.34</version>
+            <scope>provided</scope>
         </dependency>
 
     </dependencies>
