--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <javax.xml.bind.version>2.3.1</javax.xml.bind.version>
         <glassfish.jaxb.runtime.version>4.0.5</glassfish.jaxb.runtime.version>
         <aspectjweaver.version>1.9.22.1</aspectjweaver.version>
+        <mockito.version>5.13.0</mockito.version>
     </properties>
 
     <dependencies>
@@ -80,6 +81,14 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito.version}</version>
+            <scope>test</scope>
+        </dependency>
+
 
         <dependency>
             <groupId>org.slf4j</groupId>
